// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`stepper > handles clicks when interactive 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1ln5gal3 styles_labelPosition_bottom__1ln5gal4 styles_separator_true__1ln5gal7 styles_undefined_compound_0__1ln5gal8"
    >
      <div
        class="step styles__1ln5galg styles__1ln5galh styles_disabled_false__1ln5galj styles_done_true__1ln5gall styles_labelPosition_bottom__1ln5galm styles_separator_true__1ln5galo styles_size_medium__1ln5galp styles_undefined_compound_1__1ln5gals styles_undefined_compound_2__1ln5galt styles_undefined_compound_3__1ln5galu styles_inactive__1ln5galy styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_flex-start_xxsmall__mxir936j"
        data-testid="stepper-step-0"
      >
        <div
          class="styles__1ln5gal10 styles__1ln5galz styles_disabled_false__1ln5gal11 styles_size_medium__1ln5gal14 styles__1k0b4m10 styles_prominence_default__1k0b4m12 styles_size_medium__1k0b4m1b styles_undefined_compound_0__1k0b4m1f"
        >
          <svg
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <title>
              CheckIcon
            </title>
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        <span
          class="styles__1ln5gal17 styles__1ln5gal16 styles_disabled_false__1ln5gal19 styles_addMarginTop_true__1ln5gal18 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          style="--whiteSpace__1eu8od81: normal;"
        >
          step 1
        </span>
      </div>
      <div
        class="step styles__1ln5galg styles__1ln5galh styles_disabled_false__1ln5galj styles_labelPosition_bottom__1ln5galm styles_separator_true__1ln5galo styles_size_medium__1ln5galp styles_undefined_compound_1__1ln5gals styles_undefined_compound_2__1ln5galt styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_flex-start_xxsmall__mxir936j"
        data-testid="stepper-step-1"
      >
        <div
          class="styles__1ln5gal10 styles__1ln5galz styles_disabled_false__1ln5gal11 styles_isActive_true__1ln5gal13 styles_size_medium__1ln5gal14 styles__1k0b4m10 styles_prominence_strong__1k0b4m13 styles_size_medium__1k0b4m1b styles_undefined_compound_7__1k0b4m1m"
        >
          2
        </div>
        <span
          class="styles__1ln5gal17 styles__1ln5gal16 styles_disabled_false__1ln5gal19 styles_addMarginTop_true__1ln5gal18 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_primary__1yhcak8c style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_40__1yhcak82e"
          style="--whiteSpace__1eu8od81: normal;"
        >
          step 2
        </span>
      </div>
      <div
        class="step styles__1ln5galg styles__1ln5galh styles_disabled_false__1ln5galj styles_labelPosition_bottom__1ln5galm styles_separator_true__1ln5galo styles_size_medium__1ln5galp styles_undefined_compound_1__1ln5gals styles_undefined_compound_2__1ln5galt styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_flex-start_xxsmall__mxir936j"
        data-testid="stepper-step-2"
      >
        <div
          class="styles__1ln5gal10 styles__1ln5galz styles_disabled_false__1ln5gal11 styles_size_medium__1ln5gal14 styles__1k0b4m10 styles_prominence_strong__1k0b4m13 styles_size_medium__1k0b4m1b styles_undefined_compound_9__1k0b4m1o"
        >
          3
        </div>
        <span
          class="styles__1ln5gal17 styles__1ln5gal16 styles_disabled_false__1ln5gal19 styles_addMarginTop_true__1ln5gal18 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          style="--whiteSpace__1eu8od81: normal;"
        >
          step 3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stepper > handles clicks when interactive and small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1ln5gal3 styles_labelPosition_bottom__1ln5gal4 styles_separator_true__1ln5gal7 styles_undefined_compound_0__1ln5gal8"
    >
      <div
        class="step styles__1ln5galg styles__1ln5galh styles_disabled_false__1ln5galj styles_done_true__1ln5gall styles_labelPosition_bottom__1ln5galm styles_separator_true__1ln5galo styles_size_small__1ln5galq styles_undefined_compound_0__1ln5galr styles_undefined_compound_2__1ln5galt styles_undefined_compound_3__1ln5galu styles_inactive__1ln5galy styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_flex-start_xxsmall__mxir936j"
        data-testid="stepper-step-0"
      >
        <div
          class="styles__1ln5gal10 styles__1ln5galz styles_disabled_false__1ln5gal11 styles_size_small__1ln5gal15 styles__1k0b4m10 styles_prominence_default__1k0b4m12 styles_size_small__1k0b4m1c styles_undefined_compound_0__1k0b4m1f"
        >
          <svg
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <title>
              CheckIcon
            </title>
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        <span
          class="styles__1ln5gal17 styles__1ln5gal16 styles_disabled_false__1ln5gal19 styles_addMarginTop_true__1ln5gal18 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          style="--whiteSpace__1eu8od81: normal;"
        >
          step 1
        </span>
      </div>
      <div
        class="step styles__1ln5galg styles__1ln5galh styles_disabled_false__1ln5galj styles_labelPosition_bottom__1ln5galm styles_separator_true__1ln5galo styles_size_small__1ln5galq styles_undefined_compound_0__1ln5galr styles_undefined_compound_2__1ln5galt styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_flex-start_xxsmall__mxir936j"
        data-testid="stepper-step-1"
      >
        <div
          class="styles__1ln5gal10 styles__1ln5galz styles_disabled_false__1ln5gal11 styles_isActive_true__1ln5gal13 styles_size_small__1ln5gal15 styles__1k0b4m10 styles_prominence_strong__1k0b4m13 styles_size_small__1k0b4m1c styles_undefined_compound_7__1k0b4m1m"
        >
          2
        </div>
        <span
          class="styles__1ln5gal17 styles__1ln5gal16 styles_disabled_false__1ln5gal19 styles_addMarginTop_true__1ln5gal18 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_primary__1yhcak8c style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_0__1yhcak81a style_undefined_compound_40__1yhcak82e"
          style="--whiteSpace__1eu8od81: normal;"
        >
          step 2
        </span>
      </div>
      <div
        class="step styles__1ln5galg styles__1ln5galh styles_disabled_false__1ln5galj styles_labelPosition_bottom__1ln5galm styles_separator_true__1ln5galo styles_size_small__1ln5galq styles_undefined_compound_0__1ln5galr styles_undefined_compound_2__1ln5galt styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_flex-start_xxsmall__mxir936j"
        data-testid="stepper-step-2"
      >
        <div
          class="styles__1ln5gal10 styles__1ln5galz styles_disabled_false__1ln5gal11 styles_size_small__1ln5gal15 styles__1k0b4m10 styles_prominence_strong__1k0b4m13 styles_size_small__1k0b4m1c styles_undefined_compound_9__1k0b4m1o"
        >
          3
        </div>
        <span
          class="styles__1ln5gal17 styles__1ln5gal16 styles_disabled_false__1ln5gal19 styles_addMarginTop_true__1ln5gal18 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmall__1yhcak8k style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          style="--whiteSpace__1eu8od81: normal;"
        >
          step 3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stepper > handles clicks when not interactive 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1ln5gal3 styles_labelPosition_bottom__1ln5gal4 styles_separator_true__1ln5gal7 styles_undefined_compound_0__1ln5gal8"
    >
      <div
        class="step styles__1ln5galg styles__1ln5galh styles_disabled_false__1ln5galj styles_done_true__1ln5gall styles_labelPosition_bottom__1ln5galm styles_separator_true__1ln5galo styles_size_small__1ln5galq styles_undefined_compound_0__1ln5galr styles_undefined_compound_2__1ln5galt styles_undefined_compound_3__1ln5galu styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_flex-start_xxsmall__mxir936j"
        data-testid="stepper-step-0"
      >
        <div
          class="styles__1ln5gal10 styles__1ln5galz styles_disabled_false__1ln5gal11 styles_size_small__1ln5gal15 styles__1k0b4m10 styles_prominence_default__1k0b4m12 styles_size_small__1k0b4m1c styles_undefined_compound_0__1k0b4m1f"
        >
          <svg
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <title>
              CheckIcon
            </title>
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        <span
          class="styles__1ln5gal17 styles__1ln5gal16 styles_disabled_false__1ln5gal19 styles_addMarginTop_true__1ln5gal18 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          style="--whiteSpace__1eu8od81: normal;"
        >
          step 1
        </span>
      </div>
      <div
        class="step styles__1ln5galg styles__1ln5galh styles_disabled_false__1ln5galj styles_labelPosition_bottom__1ln5galm styles_separator_true__1ln5galo styles_size_small__1ln5galq styles_undefined_compound_0__1ln5galr styles_undefined_compound_2__1ln5galt styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_flex-start_xxsmall__mxir936j"
        data-testid="stepper-step-1"
      >
        <div
          class="styles__1ln5gal10 styles__1ln5galz styles_disabled_false__1ln5gal11 styles_isActive_true__1ln5gal13 styles_size_small__1ln5gal15 styles__1k0b4m10 styles_prominence_strong__1k0b4m13 styles_size_small__1k0b4m1c styles_undefined_compound_7__1k0b4m1m"
        >
          2
        </div>
        <span
          class="styles__1ln5gal17 styles__1ln5gal16 styles_disabled_false__1ln5gal19 styles_addMarginTop_true__1ln5gal18 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_primary__1yhcak8c style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_0__1yhcak81a style_undefined_compound_40__1yhcak82e"
          style="--whiteSpace__1eu8od81: normal;"
        >
          step 2
        </span>
      </div>
      <div
        class="step styles__1ln5galg styles__1ln5galh styles_disabled_false__1ln5galj styles_labelPosition_bottom__1ln5galm styles_separator_true__1ln5galo styles_size_small__1ln5galq styles_undefined_compound_0__1ln5galr styles_undefined_compound_2__1ln5galt styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_flex-start_xxsmall__mxir936j"
        data-testid="stepper-step-2"
      >
        <div
          class="styles__1ln5gal10 styles__1ln5galz styles_disabled_false__1ln5gal11 styles_size_small__1ln5gal15 styles__1k0b4m10 styles_prominence_strong__1k0b4m13 styles_size_small__1k0b4m1c styles_undefined_compound_9__1k0b4m1o"
        >
          3
        </div>
        <span
          class="styles__1ln5gal17 styles__1ln5gal16 styles_disabled_false__1ln5gal19 styles_addMarginTop_true__1ln5gal18 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmall__1yhcak8k style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          style="--whiteSpace__1eu8od81: normal;"
        >
          step 3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stepper > renders correctly with all selected 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1ln5gal3 styles_labelPosition_bottom__1ln5gal4 styles_separator_true__1ln5gal7 styles_undefined_compound_0__1ln5gal8"
    >
      <div
        class="step styles__1ln5galg styles__1ln5galh styles_disabled_false__1ln5galj styles_done_true__1ln5gall styles_labelPosition_bottom__1ln5galm styles_separator_true__1ln5galo styles_size_medium__1ln5galp styles_undefined_compound_1__1ln5gals styles_undefined_compound_2__1ln5galt styles_undefined_compound_3__1ln5galu styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_flex-start_xxsmall__mxir936j"
        data-testid="stepper-step-0"
      >
        <div
          class="styles__1ln5gal10 styles__1ln5galz styles_disabled_false__1ln5gal11 styles_size_medium__1ln5gal14 styles__1k0b4m10 styles_prominence_default__1k0b4m12 styles_size_medium__1k0b4m1b styles_undefined_compound_0__1k0b4m1f"
        >
          <svg
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <title>
              CheckIcon
            </title>
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        <span
          class="styles__1ln5gal17 styles__1ln5gal16 styles_disabled_false__1ln5gal19 styles_addMarginTop_true__1ln5gal18 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          style="--whiteSpace__1eu8od81: normal;"
        >
          step 1
        </span>
      </div>
      <div
        class="step styles__1ln5galg styles__1ln5galh styles_disabled_false__1ln5galj styles_labelPosition_bottom__1ln5galm styles_separator_true__1ln5galo styles_size_medium__1ln5galp styles_undefined_compound_1__1ln5gals styles_undefined_compound_2__1ln5galt styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_flex-start_xxsmall__mxir936j"
        data-testid="stepper-step-1"
      >
        <div
          class="styles__1ln5gal10 styles__1ln5galz styles_disabled_false__1ln5gal11 styles_isActive_true__1ln5gal13 styles_size_medium__1ln5gal14 styles__1k0b4m10 styles_prominence_strong__1k0b4m13 styles_size_medium__1k0b4m1b styles_undefined_compound_7__1k0b4m1m"
        >
          2
        </div>
        <span
          class="styles__1ln5gal17 styles__1ln5gal16 styles_disabled_false__1ln5gal19 styles_addMarginTop_true__1ln5gal18 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_primary__1yhcak8c style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_40__1yhcak82e"
          style="--whiteSpace__1eu8od81: normal;"
        >
          step 2
        </span>
      </div>
      <div
        class="step styles__1ln5galg styles__1ln5galh styles_disabled_false__1ln5galj styles_labelPosition_bottom__1ln5galm styles_separator_true__1ln5galo styles_size_medium__1ln5galp styles_undefined_compound_1__1ln5gals styles_undefined_compound_2__1ln5galt styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_flex-start_xxsmall__mxir936j"
        data-testid="stepper-step-2"
      >
        <div
          class="styles__1ln5gal10 styles__1ln5galz styles_disabled_false__1ln5gal11 styles_size_medium__1ln5gal14 styles__1k0b4m10 styles_prominence_strong__1k0b4m13 styles_size_medium__1k0b4m1b styles_undefined_compound_9__1k0b4m1o"
        >
          3
        </div>
        <span
          class="styles__1ln5gal17 styles__1ln5gal16 styles_disabled_false__1ln5gal19 styles_addMarginTop_true__1ln5gal18 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          style="--whiteSpace__1eu8od81: normal;"
        >
          step 3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stepper > renders correctly with animation 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1ln5gal3 styles_labelPosition_bottom__1ln5gal4 styles_separator_true__1ln5gal7 styles_undefined_compound_0__1ln5gal8"
    >
      <div
        class="step styles__1ln5galg styles__1ln5galh styles_animated_true__1ln5gali styles_disabled_false__1ln5galj styles_done_true__1ln5gall styles_labelPosition_bottom__1ln5galm styles_separator_true__1ln5galo styles_size_medium__1ln5galp styles_undefined_compound_1__1ln5gals styles_undefined_compound_2__1ln5galt styles_undefined_compound_3__1ln5galu styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_flex-start_xxsmall__mxir936j"
        data-testid="stepper-step-0"
      >
        <div
          class="styles__1ln5gal10 styles__1ln5galz styles_disabled_false__1ln5gal11 styles_size_medium__1ln5gal14 styles__1k0b4m10 styles_prominence_default__1k0b4m12 styles_size_medium__1k0b4m1b styles_undefined_compound_0__1k0b4m1f"
        >
          <svg
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <title>
              CheckIcon
            </title>
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        <span
          class="styles__1ln5gal17 styles__1ln5gal16 styles_disabled_false__1ln5gal19 styles_addMarginTop_true__1ln5gal18 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          style="--whiteSpace__1eu8od81: normal;"
        >
          step 1
        </span>
      </div>
      <div
        class="step styles__1ln5galg styles__1ln5galh styles_animated_true__1ln5gali styles_disabled_false__1ln5galj styles_labelPosition_bottom__1ln5galm styles_separator_true__1ln5galo styles_size_medium__1ln5galp styles_undefined_compound_1__1ln5gals styles_undefined_compound_2__1ln5galt styles_medium__1ln5galv styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_flex-start_xxsmall__mxir936j"
        data-testid="stepper-step-1"
      >
        <div
          class="styles__1ln5gal10 styles__1ln5galz styles_disabled_false__1ln5gal11 styles_isActive_true__1ln5gal13 styles_size_medium__1ln5gal14 styles__1k0b4m10 styles_prominence_strong__1k0b4m13 styles_size_medium__1k0b4m1b styles_undefined_compound_7__1k0b4m1m"
        >
          2
        </div>
        <span
          class="styles__1ln5gal17 styles__1ln5gal16 styles_disabled_false__1ln5gal19 styles_addMarginTop_true__1ln5gal18 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_primary__1yhcak8c style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_40__1yhcak82e"
          style="--whiteSpace__1eu8od81: normal;"
        >
          step 2
        </span>
      </div>
      <div
        class="step styles__1ln5galg styles__1ln5galh styles_animated_true__1ln5gali styles_disabled_false__1ln5galj styles_labelPosition_bottom__1ln5galm styles_separator_true__1ln5galo styles_size_medium__1ln5galp styles_undefined_compound_1__1ln5gals styles_undefined_compound_2__1ln5galt styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_flex-start_xxsmall__mxir936j"
        data-testid="stepper-step-2"
      >
        <div
          class="styles__1ln5gal10 styles__1ln5galz styles_disabled_false__1ln5gal11 styles_size_medium__1ln5gal14 styles__1k0b4m10 styles_prominence_strong__1k0b4m13 styles_size_medium__1k0b4m1b styles_undefined_compound_9__1k0b4m1o"
        >
          3
        </div>
        <span
          class="styles__1ln5gal17 styles__1ln5gal16 styles_disabled_false__1ln5gal19 styles_addMarginTop_true__1ln5gal18 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          style="--whiteSpace__1eu8od81: normal;"
        >
          step 3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stepper > renders correctly with children 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1ln5gal3 styles_labelPosition_bottom__1ln5gal4 styles_separator_true__1ln5gal7 styles_undefined_compound_0__1ln5gal8"
    >
      <div
        class="step styles__1ln5galg styles__1ln5galh styles_animated_true__1ln5gali styles_disabled_false__1ln5galj styles_done_true__1ln5gall styles_labelPosition_bottom__1ln5galm styles_separator_true__1ln5galo styles_size_medium__1ln5galp styles_undefined_compound_1__1ln5gals styles_undefined_compound_2__1ln5galt styles_undefined_compound_3__1ln5galu styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_flex-start_xxsmall__mxir936j"
        data-testid="stepper-step-0"
      >
        <div
          class="styles__1ln5gal10 styles__1ln5galz styles_disabled_false__1ln5gal11 styles_size_medium__1ln5gal14 styles__1k0b4m10 styles_prominence_default__1k0b4m12 styles_size_medium__1k0b4m1b styles_undefined_compound_0__1k0b4m1f"
        >
          <svg
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <title>
              CheckIcon
            </title>
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        <span
          class="styles__1ln5gal17 styles__1ln5gal16 styles_disabled_false__1ln5gal19 styles_addMarginTop_true__1ln5gal18 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          style="--whiteSpace__1eu8od81: normal;"
        >
          step 1
        </span>
        Children
      </div>
      <div
        class="step styles__1ln5galg styles__1ln5galh styles_animated_true__1ln5gali styles_disabled_false__1ln5galj styles_labelPosition_bottom__1ln5galm styles_separator_true__1ln5galo styles_size_medium__1ln5galp styles_undefined_compound_1__1ln5gals styles_undefined_compound_2__1ln5galt styles_medium__1ln5galv styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_flex-start_xxsmall__mxir936j"
        data-testid="stepper-step-1"
      >
        <div
          class="styles__1ln5gal10 styles__1ln5galz styles_disabled_false__1ln5gal11 styles_isActive_true__1ln5gal13 styles_size_medium__1ln5gal14 styles__1k0b4m10 styles_prominence_strong__1k0b4m13 styles_size_medium__1k0b4m1b styles_undefined_compound_7__1k0b4m1m"
        >
          2
        </div>
        <span
          class="styles__1ln5gal17 styles__1ln5gal16 styles_disabled_false__1ln5gal19 styles_addMarginTop_true__1ln5gal18 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_primary__1yhcak8c style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_40__1yhcak82e"
          style="--whiteSpace__1eu8od81: normal;"
        >
          step 2
        </span>
      </div>
      <div
        class="step styles__1ln5galg styles__1ln5galh styles_animated_true__1ln5gali styles_disabled_false__1ln5galj styles_labelPosition_bottom__1ln5galm styles_separator_true__1ln5galo styles_size_medium__1ln5galp styles_undefined_compound_1__1ln5gals styles_undefined_compound_2__1ln5galt styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_flex-start_xxsmall__mxir936j"
        data-testid="stepper-step-2"
      >
        <div
          class="styles__1ln5gal10 styles__1ln5galz styles_disabled_false__1ln5gal11 styles_size_medium__1ln5gal14 styles__1k0b4m10 styles_prominence_strong__1k0b4m13 styles_size_medium__1k0b4m1b styles_undefined_compound_9__1k0b4m1o"
        >
          3
        </div>
        <span
          class="styles__1ln5gal17 styles__1ln5gal16 styles_disabled_false__1ln5gal19 styles_addMarginTop_true__1ln5gal18 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          style="--whiteSpace__1eu8od81: normal;"
        >
          step 3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stepper > renders correctly with default props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1ln5gal3 styles_labelPosition_bottom__1ln5gal4 styles_separator_true__1ln5gal7 styles_undefined_compound_0__1ln5gal8"
    >
      <div
        class="step styles__1ln5galg styles__1ln5galh styles_disabled_false__1ln5galj styles_done_true__1ln5gall styles_labelPosition_bottom__1ln5galm styles_separator_true__1ln5galo styles_size_medium__1ln5galp styles_undefined_compound_1__1ln5gals styles_undefined_compound_2__1ln5galt styles_undefined_compound_3__1ln5galu styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_flex-start_xxsmall__mxir936j"
        data-testid="stepper-step-0"
      >
        <div
          class="styles__1ln5gal10 styles__1ln5galz styles_disabled_false__1ln5gal11 styles_size_medium__1ln5gal14 styles__1k0b4m10 styles_prominence_default__1k0b4m12 styles_size_medium__1k0b4m1b styles_undefined_compound_0__1k0b4m1f"
        >
          <svg
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <title>
              CheckIcon
            </title>
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        <span
          class="styles__1ln5gal17 styles__1ln5gal16 styles_disabled_false__1ln5gal19 styles_addMarginTop_true__1ln5gal18 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          style="--whiteSpace__1eu8od81: normal;"
        >
          step 1
        </span>
      </div>
      <div
        class="step styles__1ln5galg styles__1ln5galh styles_disabled_false__1ln5galj styles_labelPosition_bottom__1ln5galm styles_separator_true__1ln5galo styles_size_medium__1ln5galp styles_undefined_compound_1__1ln5gals styles_undefined_compound_2__1ln5galt styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_flex-start_xxsmall__mxir936j"
        data-testid="stepper-step-1"
      >
        <div
          class="styles__1ln5gal10 styles__1ln5galz styles_disabled_false__1ln5gal11 styles_isActive_true__1ln5gal13 styles_size_medium__1ln5gal14 styles__1k0b4m10 styles_prominence_strong__1k0b4m13 styles_size_medium__1k0b4m1b styles_undefined_compound_7__1k0b4m1m"
        >
          2
        </div>
        <span
          class="styles__1ln5gal17 styles__1ln5gal16 styles_disabled_false__1ln5gal19 styles_addMarginTop_true__1ln5gal18 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_primary__1yhcak8c style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_40__1yhcak82e"
          style="--whiteSpace__1eu8od81: normal;"
        >
          step 2
        </span>
      </div>
      <div
        class="step styles__1ln5galg styles__1ln5galh styles_disabled_false__1ln5galj styles_labelPosition_bottom__1ln5galm styles_separator_true__1ln5galo styles_size_medium__1ln5galp styles_undefined_compound_1__1ln5gals styles_undefined_compound_2__1ln5galt styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_flex-start_xxsmall__mxir936j"
        data-testid="stepper-step-2"
      >
        <div
          class="styles__1ln5gal10 styles__1ln5galz styles_disabled_false__1ln5gal11 styles_size_medium__1ln5gal14 styles__1k0b4m10 styles_prominence_strong__1k0b4m13 styles_size_medium__1k0b4m1b styles_undefined_compound_9__1k0b4m1o"
        >
          3
        </div>
        <span
          class="styles__1ln5gal17 styles__1ln5gal16 styles_disabled_false__1ln5gal19 styles_addMarginTop_true__1ln5gal18 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          style="--whiteSpace__1eu8od81: normal;"
        >
          step 3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stepper > renders correctly with disabled steps 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1ln5gal3 styles_labelPosition_bottom__1ln5gal4 styles_separator_true__1ln5gal7 styles_undefined_compound_0__1ln5gal8"
    >
      <div
        class="step styles__1ln5galg styles__1ln5galh styles_disabled_true__1ln5galk styles_labelPosition_bottom__1ln5galm styles_separator_true__1ln5galo styles_size_medium__1ln5galp styles_undefined_compound_1__1ln5gals styles_undefined_compound_2__1ln5galt styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_flex-start_xxsmall__mxir936j"
        data-testid="stepper-step-0"
      >
        <div
          class="styles__1ln5gal10 styles__1ln5galz styles_disabled_true__1ln5gal12 styles_isActive_true__1ln5gal13 styles_size_medium__1ln5gal14 styles__1k0b4m10 styles_prominence_strong__1k0b4m13 styles_size_medium__1k0b4m1b styles_undefined_compound_7__1k0b4m1m"
        >
          1
        </div>
        <span
          class="styles__1ln5gal17 styles__1ln5gal16 styles_disabled_true__1ln5gal1a styles_addMarginTop_true__1ln5gal18 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_primary__1yhcak8c style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_40__1yhcak82e"
          style="--whiteSpace__1eu8od81: normal;"
        >
          step 1
        </span>
      </div>
      <div
        class="step styles__1ln5galg styles__1ln5galh styles_disabled_false__1ln5galj styles_labelPosition_bottom__1ln5galm styles_separator_true__1ln5galo styles_size_medium__1ln5galp styles_undefined_compound_1__1ln5gals styles_undefined_compound_2__1ln5galt styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_flex-start_xxsmall__mxir936j"
        data-testid="stepper-step-1"
      >
        <div
          class="styles__1ln5gal10 styles__1ln5galz styles_disabled_false__1ln5gal11 styles_size_medium__1ln5gal14 styles__1k0b4m10 styles_prominence_strong__1k0b4m13 styles_size_medium__1k0b4m1b styles_undefined_compound_9__1k0b4m1o"
        >
          2
        </div>
        <span
          class="styles__1ln5gal17 styles__1ln5gal16 styles_disabled_false__1ln5gal19 styles_addMarginTop_true__1ln5gal18 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          style="--whiteSpace__1eu8od81: normal;"
        >
          step 2
        </span>
      </div>
      <div
        class="step styles__1ln5galg styles__1ln5galh styles_disabled_true__1ln5galk styles_labelPosition_bottom__1ln5galm styles_separator_true__1ln5galo styles_size_medium__1ln5galp styles_undefined_compound_1__1ln5gals styles_undefined_compound_2__1ln5galt styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_flex-start_xxsmall__mxir936j"
        data-testid="stepper-step-2"
      >
        <div
          class="styles__1ln5gal10 styles__1ln5galz styles_disabled_true__1ln5gal12 styles_size_medium__1ln5gal14 styles__1k0b4m10 styles_prominence_strong__1k0b4m13 styles_size_medium__1k0b4m1b styles_undefined_compound_9__1k0b4m1o"
        >
          3
        </div>
        <span
          class="styles__1ln5gal17 styles__1ln5gal16 styles_disabled_true__1ln5gal1a styles_addMarginTop_true__1ln5gal18 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          style="--whiteSpace__1eu8od81: normal;"
        >
          step 3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stepper > renders correctly with selected prop 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1ln5gal3 styles_labelPosition_bottom__1ln5gal4 styles_separator_true__1ln5gal7 styles_undefined_compound_0__1ln5gal8"
    >
      <div
        class="step styles__1ln5galg styles__1ln5galh styles_disabled_false__1ln5galj styles_done_true__1ln5gall styles_labelPosition_bottom__1ln5galm styles_separator_true__1ln5galo styles_size_medium__1ln5galp styles_undefined_compound_1__1ln5gals styles_undefined_compound_2__1ln5galt styles_undefined_compound_3__1ln5galu styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_flex-start_xxsmall__mxir936j"
        data-testid="stepper-step-0"
      >
        <div
          class="styles__1ln5gal10 styles__1ln5galz styles_disabled_false__1ln5gal11 styles_size_medium__1ln5gal14 styles__1k0b4m10 styles_prominence_default__1k0b4m12 styles_size_medium__1k0b4m1b styles_undefined_compound_0__1k0b4m1f"
        >
          <svg
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <title>
              CheckIcon
            </title>
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        <span
          class="styles__1ln5gal17 styles__1ln5gal16 styles_disabled_false__1ln5gal19 styles_addMarginTop_true__1ln5gal18 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          style="--whiteSpace__1eu8od81: normal;"
        >
          step 1
        </span>
      </div>
      <div
        class="step styles__1ln5galg styles__1ln5galh styles_disabled_false__1ln5galj styles_done_true__1ln5gall styles_labelPosition_bottom__1ln5galm styles_separator_true__1ln5galo styles_size_medium__1ln5galp styles_undefined_compound_1__1ln5gals styles_undefined_compound_2__1ln5galt styles_undefined_compound_3__1ln5galu styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_flex-start_xxsmall__mxir936j"
        data-testid="stepper-step-1"
      >
        <div
          class="styles__1ln5gal10 styles__1ln5galz styles_disabled_false__1ln5gal11 styles_size_medium__1ln5gal14 styles__1k0b4m10 styles_prominence_default__1k0b4m12 styles_size_medium__1k0b4m1b styles_undefined_compound_0__1k0b4m1f"
        >
          <svg
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <title>
              CheckIcon
            </title>
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        <span
          class="styles__1ln5gal17 styles__1ln5gal16 styles_disabled_false__1ln5gal19 styles_addMarginTop_true__1ln5gal18 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          style="--whiteSpace__1eu8od81: normal;"
        >
          step 2
        </span>
      </div>
      <div
        class="step styles__1ln5galg styles__1ln5galh styles_disabled_false__1ln5galj styles_labelPosition_bottom__1ln5galm styles_separator_true__1ln5galo styles_size_medium__1ln5galp styles_undefined_compound_1__1ln5gals styles_undefined_compound_2__1ln5galt styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_flex-start_xxsmall__mxir936j"
        data-testid="stepper-step-2"
      >
        <div
          class="styles__1ln5gal10 styles__1ln5galz styles_disabled_false__1ln5gal11 styles_isActive_true__1ln5gal13 styles_size_medium__1ln5gal14 styles__1k0b4m10 styles_prominence_strong__1k0b4m13 styles_size_medium__1k0b4m1b styles_undefined_compound_7__1k0b4m1m"
        >
          3
        </div>
        <span
          class="styles__1ln5gal17 styles__1ln5gal16 styles_disabled_false__1ln5gal19 styles_addMarginTop_true__1ln5gal18 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_primary__1yhcak8c style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_40__1yhcak82e"
          style="--whiteSpace__1eu8od81: normal;"
        >
          step 3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stepper > renders correctly with small size 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1ln5gal3 styles_labelPosition_bottom__1ln5gal4 styles_separator_true__1ln5gal7 styles_undefined_compound_0__1ln5gal8"
    >
      <div
        class="step styles__1ln5galg styles__1ln5galh styles_disabled_false__1ln5galj styles_done_true__1ln5gall styles_labelPosition_bottom__1ln5galm styles_separator_true__1ln5galo styles_size_small__1ln5galq styles_undefined_compound_0__1ln5galr styles_undefined_compound_2__1ln5galt styles_undefined_compound_3__1ln5galu styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_flex-start_xxsmall__mxir936j"
        data-testid="stepper-step-0"
      >
        <div
          class="styles__1ln5gal10 styles__1ln5galz styles_disabled_false__1ln5gal11 styles_size_small__1ln5gal15 styles__1k0b4m10 styles_prominence_default__1k0b4m12 styles_size_small__1k0b4m1c styles_undefined_compound_0__1k0b4m1f"
        >
          <svg
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <title>
              CheckIcon
            </title>
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        <span
          class="styles__1ln5gal17 styles__1ln5gal16 styles_disabled_false__1ln5gal19 styles_addMarginTop_true__1ln5gal18 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          style="--whiteSpace__1eu8od81: normal;"
        >
          step 1
        </span>
      </div>
      <div
        class="step styles__1ln5galg styles__1ln5galh styles_disabled_false__1ln5galj styles_labelPosition_bottom__1ln5galm styles_separator_true__1ln5galo styles_size_small__1ln5galq styles_undefined_compound_0__1ln5galr styles_undefined_compound_2__1ln5galt styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_flex-start_xxsmall__mxir936j"
        data-testid="stepper-step-1"
      >
        <div
          class="styles__1ln5gal10 styles__1ln5galz styles_disabled_false__1ln5gal11 styles_isActive_true__1ln5gal13 styles_size_small__1ln5gal15 styles__1k0b4m10 styles_prominence_strong__1k0b4m13 styles_size_small__1k0b4m1c styles_undefined_compound_7__1k0b4m1m"
        >
          2
        </div>
        <span
          class="styles__1ln5gal17 styles__1ln5gal16 styles_disabled_false__1ln5gal19 styles_addMarginTop_true__1ln5gal18 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_primary__1yhcak8c style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_0__1yhcak81a style_undefined_compound_40__1yhcak82e"
          style="--whiteSpace__1eu8od81: normal;"
        >
          step 2
        </span>
      </div>
      <div
        class="step styles__1ln5galg styles__1ln5galh styles_disabled_false__1ln5galj styles_labelPosition_bottom__1ln5galm styles_separator_true__1ln5galo styles_size_small__1ln5galq styles_undefined_compound_0__1ln5galr styles_undefined_compound_2__1ln5galt styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_flex-start_xxsmall__mxir936j"
        data-testid="stepper-step-2"
      >
        <div
          class="styles__1ln5gal10 styles__1ln5galz styles_disabled_false__1ln5gal11 styles_size_small__1ln5gal15 styles__1k0b4m10 styles_prominence_strong__1k0b4m13 styles_size_small__1k0b4m1c styles_undefined_compound_9__1k0b4m1o"
        >
          3
        </div>
        <span
          class="styles__1ln5gal17 styles__1ln5gal16 styles_disabled_false__1ln5gal19 styles_addMarginTop_true__1ln5gal18 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmall__1yhcak8k style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          style="--whiteSpace__1eu8od81: normal;"
        >
          step 3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stepper > renders correctly with step number in row 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1ln5gal3 styles_labelPosition_right__1ln5gal5 styles_separator_true__1ln5gal7 styles_undefined_compound_1__1ln5gal9"
    >
      <div
        class="step styles__1ln5galg styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_flex-start_xxsmall__mxir936j"
        data-testid="stepper-step-0"
      >
        <div
          class="styles__1ln5gal10 styles__1ln5galz styles_disabled_false__1ln5gal11 styles_size_medium__1ln5gal14 styles__1k0b4m10 styles_prominence_default__1k0b4m12 styles_size_medium__1k0b4m1b styles_undefined_compound_0__1k0b4m1f"
        >
          <svg
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <title>
              CheckIcon
            </title>
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        <span
          class="styles__1ln5gal17 styles__1ln5gal16 styles_disabled_false__1ln5gal19 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          style="--whiteSpace__1eu8od81: normal;"
        >
          step 1
        </span>
      </div>
      <div
        class="styles__1ln5gala styles_temporal_done__1ln5gald"
        data-size="medium"
      />
      <div
        class="step styles__1ln5galg styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_flex-start_xxsmall__mxir936j"
        data-testid="stepper-step-1"
      >
        <div
          class="styles__1ln5gal10 styles__1ln5galz styles_disabled_false__1ln5gal11 styles_isActive_true__1ln5gal13 styles_size_medium__1ln5gal14 styles__1k0b4m10 styles_prominence_strong__1k0b4m13 styles_size_medium__1k0b4m1b styles_undefined_compound_7__1k0b4m1m"
        >
          2
        </div>
        <span
          class="styles__1ln5gal17 styles__1ln5gal16 styles_disabled_false__1ln5gal19 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_primary__1yhcak8c style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_40__1yhcak82e"
          style="--whiteSpace__1eu8od81: normal;"
        >
          step 2
        </span>
      </div>
      <div
        class="styles__1ln5gala styles_temporal_current__1ln5galc"
        data-size="medium"
      />
      <div
        class="step styles__1ln5galg styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_flex-start_xxsmall__mxir936j"
        data-testid="stepper-step-2"
      >
        <div
          class="styles__1ln5gal10 styles__1ln5galz styles_disabled_false__1ln5gal11 styles_size_medium__1ln5gal14 styles__1k0b4m10 styles_prominence_strong__1k0b4m13 styles_size_medium__1k0b4m1b styles_undefined_compound_9__1k0b4m1o"
        >
          3
        </div>
        <span
          class="styles__1ln5gal17 styles__1ln5gal16 styles_disabled_false__1ln5gal19 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          style="--whiteSpace__1eu8od81: normal;"
        >
          step 3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stepper > renders correctly without Stepper.Step 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1ln5gal3 styles_labelPosition_bottom__1ln5gal4 styles_separator_true__1ln5gal7 styles_undefined_compound_0__1ln5gal8"
    >
      <div
        class="step styles__1ln5galg styles__1ln5galh styles_disabled_false__1ln5galj styles_done_true__1ln5gall styles_labelPosition_bottom__1ln5galm styles_separator_true__1ln5galo styles_size_small__1ln5galq styles_undefined_compound_0__1ln5galr styles_undefined_compound_2__1ln5galt styles_undefined_compound_3__1ln5galu styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_flex-start_xxsmall__mxir936j"
        data-testid="stepper-step-0"
      >
        <div
          class="styles__1ln5gal10 styles__1ln5galz styles_disabled_false__1ln5gal11 styles_size_small__1ln5gal15 styles__1k0b4m10 styles_prominence_default__1k0b4m12 styles_size_small__1k0b4m1c styles_undefined_compound_0__1k0b4m1f"
        >
          <svg
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <title>
              CheckIcon
            </title>
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        Step 1
      </div>
      <div
        class="step styles__1ln5galg styles__1ln5galh styles_disabled_false__1ln5galj styles_labelPosition_bottom__1ln5galm styles_separator_true__1ln5galo styles_size_small__1ln5galq styles_undefined_compound_0__1ln5galr styles_undefined_compound_2__1ln5galt styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_flex-start_xxsmall__mxir936j"
        data-testid="stepper-step-1"
      >
        <div
          class="styles__1ln5gal10 styles__1ln5galz styles_disabled_false__1ln5gal11 styles_isActive_true__1ln5gal13 styles_size_small__1ln5gal15 styles__1k0b4m10 styles_prominence_strong__1k0b4m13 styles_size_small__1k0b4m1c styles_undefined_compound_7__1k0b4m1m"
        >
          2
        </div>
        Step 2
      </div>
      <div
        class="step styles__1ln5galg styles__1ln5galh styles_disabled_false__1ln5galj styles_labelPosition_bottom__1ln5galm styles_separator_true__1ln5galo styles_size_small__1ln5galq styles_undefined_compound_0__1ln5galr styles_undefined_compound_2__1ln5galt styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_flex-start_xxsmall__mxir936j"
        data-testid="stepper-step-2"
      >
        <div
          class="styles__1ln5gal10 styles__1ln5galz styles_disabled_false__1ln5gal11 styles_size_small__1ln5gal15 styles__1k0b4m10 styles_prominence_strong__1k0b4m13 styles_size_small__1k0b4m1c styles_undefined_compound_9__1k0b4m1o"
        >
          3
        </div>
        Step 3
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stepper > renders correctly without separator 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1ln5gal3 styles_labelPosition_bottom__1ln5gal4 styles_separator_false__1ln5gal6"
    >
      <div
        class="step styles__1ln5galg styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_flex-start_xxsmall__mxir936j"
        data-testid="stepper-step-0"
      >
        <div
          class="styles__1ln5gal10 styles__1ln5galz styles_disabled_false__1ln5gal11 styles_size_medium__1ln5gal14 styles__1k0b4m10 styles_prominence_default__1k0b4m12 styles_size_medium__1k0b4m1b styles_undefined_compound_0__1k0b4m1f"
        >
          <svg
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <title>
              CheckIcon
            </title>
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        <span
          class="styles__1ln5gal17 styles__1ln5gal16 styles_disabled_false__1ln5gal19 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          style="--whiteSpace__1eu8od81: normal;"
        >
          step 1
        </span>
      </div>
      <div
        class="step styles__1ln5galg styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_flex-start_xxsmall__mxir936j"
        data-testid="stepper-step-1"
      >
        <div
          class="styles__1ln5gal10 styles__1ln5galz styles_disabled_false__1ln5gal11 styles_isActive_true__1ln5gal13 styles_size_medium__1ln5gal14 styles__1k0b4m10 styles_prominence_strong__1k0b4m13 styles_size_medium__1k0b4m1b styles_undefined_compound_7__1k0b4m1m"
        >
          2
        </div>
        <span
          class="styles__1ln5gal17 styles__1ln5gal16 styles_disabled_false__1ln5gal19 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_primary__1yhcak8c style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_40__1yhcak82e"
          style="--whiteSpace__1eu8od81: normal;"
        >
          step 2
        </span>
      </div>
      <div
        class="step styles__1ln5galg styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_flex-start_xxsmall__mxir936j"
        data-testid="stepper-step-2"
      >
        <div
          class="styles__1ln5gal10 styles__1ln5galz styles_disabled_false__1ln5gal11 styles_size_medium__1ln5gal14 styles__1k0b4m10 styles_prominence_strong__1k0b4m13 styles_size_medium__1k0b4m1b styles_undefined_compound_9__1k0b4m1o"
        >
          3
        </div>
        <span
          class="styles__1ln5gal17 styles__1ln5gal16 styles_disabled_false__1ln5gal19 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          style="--whiteSpace__1eu8od81: normal;"
        >
          step 3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stepper > renders correctly without separator with label on the right 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1ln5gal3 styles_labelPosition_right__1ln5gal5 styles_separator_false__1ln5gal6"
    >
      <div
        class="step styles__1ln5galg styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_flex-start_xxsmall__mxir936j"
        data-testid="stepper-step-0"
      >
        <div
          class="styles__1ln5gal10 styles__1ln5galz styles_disabled_false__1ln5gal11 styles_size_medium__1ln5gal14 styles__1k0b4m10 styles_prominence_default__1k0b4m12 styles_size_medium__1k0b4m1b styles_undefined_compound_0__1k0b4m1f"
        >
          <svg
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <title>
              CheckIcon
            </title>
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        <span
          class="styles__1ln5gal17 styles__1ln5gal16 styles_disabled_false__1ln5gal19 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          style="--whiteSpace__1eu8od81: normal;"
        >
          step 1
        </span>
      </div>
      <div
        class="step styles__1ln5galg styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_flex-start_xxsmall__mxir936j"
        data-testid="stepper-step-1"
      >
        <div
          class="styles__1ln5gal10 styles__1ln5galz styles_disabled_false__1ln5gal11 styles_isActive_true__1ln5gal13 styles_size_medium__1ln5gal14 styles__1k0b4m10 styles_prominence_strong__1k0b4m13 styles_size_medium__1k0b4m1b styles_undefined_compound_7__1k0b4m1m"
        >
          2
        </div>
        <span
          class="styles__1ln5gal17 styles__1ln5gal16 styles_disabled_false__1ln5gal19 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_primary__1yhcak8c style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_40__1yhcak82e"
          style="--whiteSpace__1eu8od81: normal;"
        >
          step 2
        </span>
      </div>
      <div
        class="step styles__1ln5galg styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_flex-start_xxsmall__mxir936j"
        data-testid="stepper-step-2"
      >
        <div
          class="styles__1ln5gal10 styles__1ln5galz styles_disabled_false__1ln5gal11 styles_size_medium__1ln5gal14 styles__1k0b4m10 styles_prominence_strong__1k0b4m13 styles_size_medium__1k0b4m1b styles_undefined_compound_9__1k0b4m1o"
        >
          3
        </div>
        <span
          class="styles__1ln5gal17 styles__1ln5gal16 styles_disabled_false__1ln5gal19 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          style="--whiteSpace__1eu8od81: normal;"
        >
          step 3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
